# beanmachine

./: .gitignore  setup.py
src/beanmachine/paic2/: CMakeLists.txt  rebuild_no_py.sh
src/beanmachine/paic2/include/: NoPyMLIRBuilder.h  NoPyPaicAST.h  PaicAST.h
src/beanmachine/paic2/src/: NoPyMLIRBuilder.cpp  no_py.cpp
src/beanmachine/paic2/src/bm/: LowerToFunc.cpp  LowerToLLVM.cpp
src/beanmachine/paic2/test/: world_test.py
src/beanmachine/ppl/compiler/: bm_graph_builder.py  bmg_nodes.py  bmg_requirements.py  bmg_types.py  broadcast.py  copy_and_replace.py  copy_transformer.py  devector_transformer.py  devectorizer_transformer.py  error_report.py  fix_observe_true.py  fix_problem.py  fix_problems.py  fix_requirements.py  fix_unsupported.py  fix_vectorized_graphs.py  gen_bmg_graph.py  gen_dot.py  graph_labels.py  lattice_typer.py  size_assessment.py  sizer.py  tensorize_transformer.py  tensorizer_transformer.py
src/beanmachine/ppl/compiler/paic/: mlir_generator.py
src/beanmachine/ppl/compiler/paic/mlir/: CMakeLists.txt  __init__.py
src/beanmachine/ppl/compiler/paic/mlir/bm_build/: CMakeCache.txt  build.ninja  cmake_install.cmake
src/beanmachine/ppl/compiler/paic/mlir/bm_build/include/: cmake_install.cmake
src/beanmachine/ppl/compiler/paic/mlir/bm_build/python/: cmake_install.cmake
src/beanmachine/ppl/compiler/paic/mlir/bm_build/src/: cmake_install.cmake
src/beanmachine/ppl/compiler/paic/mlir/bm_build2/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
src/beanmachine/ppl/compiler/paic/mlir/bm_build2/include/: ShapeInferenceOpInterfaces.cpp.inc.d  ShapeInferenceOpInterfaces.h.inc.d  ToyCombine.inc  cmake_install.cmake  dialect.cpp.inc.d  ops.cpp.inc.d  ops.h.inc.d
src/beanmachine/ppl/compiler/paic/mlir/bm_build2/python/: cmake_install.cmake
src/beanmachine/ppl/compiler/paic/mlir/bm_build2/src/: cmake_install.cmake
src/beanmachine/ppl/compiler/paic/mlir/include/: AbstractWorld.h  CMakeLists.txt  Lexer.h  MLIRBuilder.h  MLIRGenImpl.h  MLIRGenerator.h  PaicAST.h  Parser.h  Passes.h  ShapeInferenceInterface.h  ToyAST.h  ToyCombine.td  ToyDialect.h  WorldClassSpec.h  WorldTypeBuilder.h  ops.td  pybind_utils.h
src/beanmachine/ppl/compiler/paic/mlir/include/bm/: BMDialect.h  CMakeLists.txt  bm_ops.td  passes.h
src/beanmachine/ppl/compiler/paic/mlir/python/: MLIRBuilder.cpp  PaicAST.cpp  WorldTypeBuilder.cpp
src/beanmachine/ppl/compiler/paic/mlir/src/: AST.cpp  LowerToAffineLoops.cpp  LowerToLLVM.cpp  MLIRGenerator.cpp  ShapeInferencePass.cpp  ToyCombine.cpp  ToyDialect.cpp
src/beanmachine/ppl/compiler/paic/mlir/src/bm/: LowerToFunc.cpp  LowerToLLVM.cpp  dialect.cpp
src/beanmachine/ppl/compiler/paic/mlir/test/: main.cpp  main2.cpp
src/beanmachine/ppl/compiler/paic/mlir/test_paic_mlir/: main.cpp  meta_world.py  test.py  test_world_type_creation.py  to_metal.py  to_paic_ast.py
src/beanmachine/ppl/compiler/paic/mlir/test_paic_mlir/infer/: functional_sample.py  import_inference.py  mcmc.py  meta_ad.py  meta_world.py
src/beanmachine/ppl/compiler/paic/mlir/test_paic_mlir/infer/propose/: BaseProposer_MetaWorld.py  BaseSingleSiteMHProposer_MetaWorld.py  single_site_real_space_nmc_proposer.py
src/beanmachine/ppl/compiler/paic/mlir/test_paic_mlir/infer/test/: test_infer.py
src/beanmachine/ppl/compiler/paic/tests/: compile_simple.py
src/beanmachine/ppl/compiler/tests/: bm_graph_builder_test.py  bmg_arithmetic_test.py  broadcast_test.py  column_index_test.py  devectorize_test.py  devectorizer_transformer_test.py  fix_matrix_type_test.py  fix_problems_test.py  fix_vectorized_models_test.py  fix_vectors.py  gep_test.py  lromm_test.py  lse_vector_test.py  size_assessment_test.py  tensorize_transformer_test.py  tensorizer_transformer_tests.py  to_matrix_test.py
src/beanmachine/ppl/experimental/global_inference/: base_inference.py
src/beanmachine/ppl/inference/: bmg_inference.py
